force-app/main/default/objects/Zona_Servicio_Pyatz__c/Zona_Servicio_Pyatz__c.object-meta.xml
<CustomObject>
    <description>Registra las áreas específicas donde se aplicarán los servicios comerciales de Pyatz para trazabilidad y Field Service.</description>
    <label>Zona de Servicio Pyatz</label>
    <nameField>
        <label>Nombre de Zona</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zonas de Servicio Pyatz</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>