force-app/main/default/objects/Zona_Servicio_Pyatz__c/fields/Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Presupuesto del que nace el servicio para esta zona.</description>
    <label>Cotización</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Zonas de Servicio Pyatz</relationshipLabel>
    <relationshipName>Zonas_de_Servicio_Pyatz</relationshipName>
    <type>Lookup</type>
</CustomField>