force-app/main/default/objects/Zona_Servicio_Pyatz__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cliente dueño del espacio físico atendido.</description>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Zonas de Servicio Pyatz</relationshipLabel>
    <relationshipName>Zonas_de_Servicio_Pyatz</relationshipName>
    <type>Lookup</type>
</CustomField>