force-app/main/default/objects/Zona_Servicio_Pyatz__c/fields/Detalle_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Detalle_Tecnico__c</fullName>
    <description>Especificaciones del servicio para esta zona específica.</description>
    <label>Detalle Técnico</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>