force-app/main/default/objects/Zona_Servicio_Pyatz__c/fields/Id_Unico_Zona__c.field-meta.xml
<CustomField>
    <fullName>Id_Unico_Zona__c</fullName>
    <description>ID técnico para evitar duplicidad de zonas en una misma partida.</description>
    <externalId>true</externalId>
    <label>ID Único Zona</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>