force-app/main/default/objects/Zona_Servicio_Pyatz__c/fields/Levantamiento_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Levantamiento_Tecnico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relación con el levantamiento técnico original (Etapa 1).</description>
    <label>Levantamiento Técnico</label>
    <referenceTo>Levantamiento_Tecnico__c</referenceTo>
    <relationshipLabel>Zonas de Servicio Pyatz</relationshipLabel>
    <relationshipName>Zonas_de_Servicio_Pyatz</relationshipName>
    <type>Lookup</type>
</CustomField>