force-app/main/default/objects/Zona_Servicio_Pyatz__c/fields/Linea_de_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Cotizacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partida del presupuesto vinculada a este servicio en zona.</description>
    <label>Línea de Cotización</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Zonas de Servicio Pyatz</relationshipLabel>
    <relationshipName>Zonas_de_Servicio_Pyatz</relationshipName>
    <type>Lookup</type>
</CustomField>