force-app/main/default/objects/Zona_Servicio_Pyatz__c/fields/Linea_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Negocio__c</fullName>
    <description>Línea de negocio seleccionada en el presupuesto (Etapa 2).</description>
    <label>Línea de Negocio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>