force-app/main/default/objects/Zona_Servicio_Pyatz__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Negocio asociado a esta zona.</description>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Zonas de Servicio Pyatz</relationshipLabel>
    <relationshipName>Zonas_de_Servicio_Pyatz</relationshipName>
    <type>Lookup</type>
</CustomField>