force-app/main/default/objects/Zona_Servicio_Pyatz__c/fields/Plantilla_de_Formulario__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_de_Formulario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla de Formulario</label>
    <referenceTo>Form_Template__c</referenceTo>
    <relationshipLabel>Zonas de Servicio Pyatz</relationshipLabel>
    <relationshipName>Zonas_de_Servicio_Pyatz</relationshipName>
    <type>Lookup</type>
</CustomField>