force-app/main/default/objects/Zona_Servicio_Pyatz__c/fields/Tipo_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Servicio__c</fullName>
    <description>Línea de servicio aplicada en esta zona específica (ej: Fumigación, Bioenzimático).</description>
    <label>Tipo de Servicio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>